--- a/Game.css
+++ b/Game.css
@@ -2,6 +2,7 @@
   display: none !important;
 }
 
+/* GAME BOARD */
 #field {
   width: 100%;
   height: 100%;
@@ -11,7 +12,9 @@
   z-index: 10;
 }
 
+/* PLAY BUTTONS ON MODALS */
 .start {
+  margin-top: 1em;
   color: white;
   background-color: #000000;
   font-size: 20px;
@@ -32,14 +35,20 @@
   border-color: ForestGreen;
 }
 
+/* TEXT IN MODALS */
 .text {
   padding-bottom: 20px !important;
 }
-
 .score-text {
-  
+  padding-bottom: 0;
+  width: 66%;
+  text-align: center;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin-top: 1px;
 }
 
+/* MODALS */
 #modal-play, #modal-score {
   z-index: 30;
   font-size: 16px;
@@ -60,7 +69,6 @@
   align-items: center;
   justify-content: center;
 }
-
 #modal-area {
   font-family: "Aldrich";
   color: #000000;
@@ -70,7 +78,6 @@
   position: absolute;
   top: 0;
 }
-
 #modal-overlay {
   z-index: 20;
   top: 0;
@@ -82,6 +89,7 @@
   position: fixed;
 }
 
+/* SCORE AND TIME TRACKER */
 #info-bar {
   font-family: "Aldrich";
   display: flex;
@@ -99,23 +107,21 @@
   background-color: #000000;
 }
 
+/* CIRCLES */
 .smallCircle, .mediumCircle, .largeCircle {
   border-radius: 50%;
   position: absolute;
 }
-
 .smallCircle {
   height: 10px;
   width: 10px;
   background-color: RoyalBlue;
 }
-
 .mediumCircle {
   height: 20px;
   width: 20px;
   background-color: ForestGreen;
 }
-
 .largeCircle {
   height: 30px;
   width: 30px;
