Added Madness Mode, and checks for all checkboxes on click

--- a/Game.css
+++ b/Game.css
@@ -1,3 +1,12 @@
+html {
+	overflow: hidden;
+}
+
+#code-field > .et_pb_code_inner {
+	height: 100% !important;
+	width: 100% !important;
+}
+
 .hidden {
   display: none !important;
 }
@@ -36,7 +45,12 @@
 }
 
 /* TEXT IN MODALS */
-.text {
+#text-play {
+  padding-bottom: 20px !important;
+  text-align: center;
+  margin-top: -35px;
+}
+#text-score {
   padding-bottom: 20px !important;
 }
 .score-text {
@@ -126,4 +140,52 @@
   height: 30px;
   width: 30px;
   background-color: OrangeRed;
+}
+
+/* CHECKBOXES */
+input[type=checkbox] + label {
+  display: block;
+  margin: 0.2em;
+  cursor: pointer;
+  padding: 0.2em;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox] + label:before {
+  content: "\2714";
+  border: 0.1em solid #000;
+  border-radius: 0.2em;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  padding-left: 0.2em;
+  padding-bottom: 0.3em;
+  margin-right: 0.6em;
+  vertical-align: bottom;
+  color: transparent;
+  transition: .2s;
+}
+
+input[type=checkbox] + label:active:before {
+  transform: scale(0);
+}
+
+input[type=checkbox]:checked + label:before {
+  background-color: DeepSkyBlue;
+  border-color: DeepSkyBlue;
+  color: #fff;
+}
+
+input[type=checkbox]:disabled + label:before {
+  transform: scale(1);
+  border-color: #aaa;
+}
+
+input[type=checkbox]:checked:disabled + label:before {
+  transform: scale(1);
+  background-color: #bfb;
+  border-color: #bfb;
 }
