--- a/Game.css
+++ b/Game.css
@@ -46,7 +46,8 @@ html {
 
 /* TEXT IN MODALS */
 #text-play {
-  padding-bottom: 20px !important;
+  /* padding-bottom: 20px !important; */
+	padding-bottom: 0px !important;
   text-align: center;
 }
 #text-play > p {
@@ -63,6 +64,9 @@ html {
   border-radius: 5px;
   margin-top: 1px;
 }
+#difficulty {
+	color: red;
+}
 
 /* MODALS */
 #modal-play, #modal-score {
@@ -77,9 +81,9 @@ html {
   z-index: 1000;
   border: 7px outset DeepSkyBlue;
   border-radius: 8px;
-  min-height: 300px;
+  min-height: 320px;
   overflow-y: auto;
-  min-width: 300px;
+  min-width: 320px;
   display: flex;
   flex-direction: column;
   align-items: center;
